package padroesestruturais.proxy;

public interface IDocumento {
    String ler(Usuario usuario);
}
